--- a/Tsltn/Resources/Res.resx
+++ b/Tsltn/Resources/Res.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AboutMenuItem" xml:space="preserve">
+    <value>About</value>
+  </data>
   <data name="BrowseAll" xml:space="preserve">
     <value>Browse all</value>
   </data>
@@ -129,26 +132,62 @@
   <data name="CopyXml" xml:space="preserve">
     <value>Copy xml</value>
   </data>
+  <data name="FileMenuHeader" xml:space="preserve">
+    <value>File</value>
+  </data>
   <data name="GoTo" xml:space="preserve">
     <value>Go to:</value>
+  </data>
+  <data name="HelpMenuHeader" xml:space="preserve">
+    <value>Help</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Next &gt;</value>
   </data>
+  <data name="NodePath" xml:space="preserve">
+    <value>Node path:</value>
+  </data>
   <data name="NoElementFound" xml:space="preserve">
-    <value>No element was found that contains {0} in its path.</value>
+    <value>No element was found, that contains {0} in its path.</value>
   </data>
   <data name="NotAXmlFile" xml:space="preserve">
     <value>The file {0} is empty{1}or not a {2}.</value>
   </data>
+  <data name="OpenSourceFile" xml:space="preserve">
+    <value>Open the file to translate</value>
+  </data>
+  <data name="Original" xml:space="preserve">
+    <value>Original</value>
+  </data>
   <data name="Previous" xml:space="preserve">
     <value>&lt; Previous</value>
+  </data>
+  <data name="QuitMenuItem" xml:space="preserve">
+    <value>Quit</value>
+  </data>
+  <data name="RecentFilesMenuItem" xml:space="preserve">
+    <value>Recent files</value>
+  </data>
+  <data name="Reset" xml:space="preserve">
+    <value>Reset</value>
   </data>
   <data name="Shift" xml:space="preserve">
     <value>Shift</value>
   </data>
+  <data name="SourceFile" xml:space="preserve">
+    <value>Source file:</value>
+  </data>
+  <data name="SourceLanguage" xml:space="preserve">
+    <value>Source language:</value>
+  </data>
+  <data name="TargetLanguage" xml:space="preserve">
+    <value>Target language:</value>
+  </data>
   <data name="Translate" xml:space="preserve">
     <value>Translate</value>
+  </data>
+  <data name="Translation" xml:space="preserve">
+    <value>Translation</value>
   </data>
   <data name="TsltnFile" xml:space="preserve">
     <value>Tsltn file</value>
