--- a/FolkerKinzel.Tsltn.Controllers/Resources/Res.resx
+++ b/FolkerKinzel.Tsltn.Controllers/Resources/Res.resx
@@ -129,6 +129,9 @@
   <data name="InvalidXml" xml:space="preserve">
     <value>The translation contains invalid XML</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Language</value>
+  </data>
   <data name="OpenSourceFile" xml:space="preserve">
     <value>Open the source file to translate</value>
   </data>
