--- a/FolkerKinzel.Tsltn.Models/Resources/Res.resx
+++ b/FolkerKinzel.Tsltn.Models/Resources/Res.resx
@@ -117,28 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="EmptyOrInvalidFile" xml:space="preserve">
-    <value>The file{0}"{1}"{0}is empty or not a{0}{2}!</value>
-  </data>
-  <data name="FileAlreadyOpen" xml:space="preserve">
-    <value>The file is already open.</value>
-  </data>
-  <data name="FileWasChanged" xml:space="preserve">
-    <value>"The file "{0}" was changed.{1}Do you want to save the changes?"</value>
-  </data>
-  <data name="Language" xml:space="preserve">
-    <value>Language</value>
-  </data>
-  <data name="OpenSourceFile" xml:space="preserve">
-    <value>Open the source file to translate</value>
-  </data>
-  <data name="SourceDocumentNotFound" xml:space="preserve">
-    <value>The source document{0}"{1}"{0}was not found!</value>
-  </data>
-  <data name="TsltnFile" xml:space="preserve">
-    <value>Tsltn file</value>
-  </data>
-  <data name="XmlDocumentationFile" xml:space="preserve">
-    <value>Visual Studio XML documentation file</value>
+  <data name="InvalidXml" xml:space="preserve">
+    <value>The translation contains invalid XML</value>
   </data>
 </root>
