--- a/FolkerKinzel.Tsltn.Controllers/Resources/Res.resx
+++ b/FolkerKinzel.Tsltn.Controllers/Resources/Res.resx
@@ -132,6 +132,9 @@
   <data name="OpenSourceFile" xml:space="preserve">
     <value>Open the source file to translate</value>
   </data>
+  <data name="SaveTranslationAs" xml:space="preserve">
+    <value>Save Translation As</value>
+  </data>
   <data name="SourceDocumentNotFound" xml:space="preserve">
     <value>The source document{0}"{1}"{0}was not found!</value>
   </data>
