--- a/FolkerKinzel.Tsltn.Controllers/Resources/Res.resx
+++ b/FolkerKinzel.Tsltn.Controllers/Resources/Res.resx
@@ -124,7 +124,7 @@
     <value>The file is already open.</value>
   </data>
   <data name="FileWasChanged" xml:space="preserve">
-    <value>"The file "{0}" was changed.{1}Do you want to save the changes?"</value>
+    <value>The file "{0}" was changed.{1}Do you want to save the changes?</value>
   </data>
   <data name="Language" xml:space="preserve">
     <value>Language</value>
@@ -137,6 +137,9 @@
   </data>
   <data name="SaveTranslationAs" xml:space="preserve">
     <value>Save Translation As</value>
+  </data>
+  <data name="SourceDocumentChanged" xml:space="preserve">
+    <value>The source document was changed outside of the editor.{0}Do you want to reload the translation?</value>
   </data>
   <data name="SourceDocumentNotFound" xml:space="preserve">
     <value>The source document{0}"{1}"{0}was not found!</value>
