--- a/Tsltn/Resources/Res.resx
+++ b/Tsltn/Resources/Res.resx
@@ -174,6 +174,9 @@
   <data name="ExtrasMenuHeader" xml:space="preserve">
     <value>Extras</value>
   </data>
+  <data name="FileAlreadyOpen" xml:space="preserve">
+    <value>The file is already open.</value>
+  </data>
   <data name="FileMenuHeader" xml:space="preserve">
     <value>File</value>
   </data>
@@ -228,6 +231,9 @@
   </data>
   <data name="OnlineHelpMenuHeader" xml:space="preserve">
     <value>{0} at GitHub</value>
+  </data>
+  <data name="OpenFileFailed" xml:space="preserve">
+    <value>Failed to open the file{0}{1}{0}Failure: {2}</value>
   </data>
   <data name="OpenMenuItem" xml:space="preserve">
     <value>Open</value>
